BUG: Having issues with TS modules
Somehow, I may need to use a bundler...

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -24,13 +24,15 @@
 
 <body>
 
+  <input type="number" id="cell_count" oninput="inputChange();">
+
   <div class="wrapper">
     <canvas id="gameboard">
 
     </canvas>
   </div>
 
-  <script src=" /v1/web/static/main.js" defer type="module"></script>
+  <script src="/v1/web/static/main.js" type="module"></script>
 </body>
 
 </html>
