FEAT: Huge rework! Basically MS Paint now

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -25,6 +25,8 @@
 <body>
 
   <input type="number" id="cell_count" oninput="inputChange();">
+  <input type="color" id="color_picker" oninput="changeColor();" value="#ffffff">
+  <input type="color" id="active_color_picker" oninput="changeActiveColor();" value="#ffffff">
 
   <div class="wrapper">
     <canvas id="gameboard">
